# geometry-engineer-ai-road

./: .gitignore  README.md  index.html
assets/: app.js  style.css
code/week01_A/: CMakeLists.txt  CMakePresets.json  CMake构建与编译笔记（Mac·Clang篇）.md  CMake构建与编译笔记（Win·VS2026篇）.md  README.md  VSCode调试技巧笔记.md  test_bezier.cpp  test_bspline.cpp  test_nurbs.cpp
code/week02_A/: CMakeLists.txt  README.md  test_point_in_polygon.cpp  test_point_inversion.cpp  test_ray_triangle.cpp
code/week03_A/: .gitignore  .markdownlint.jsonc  CMakeLists.txt  README.md  mini_types.h  test_circumcircle.cpp  test_plane_fit.cpp
code/week04_A/: .markdownlint.jsonc  CMakeLists.txt  README.md  mesh.h  test_bilateral_weight.cpp  test_mesh_smooth.cpp  test_vertex_normal.cpp
code/week05_A/: .gitignore  .markdownlint.jsonc  CMakeLists.txt  README.md  energy.h  test_gradient.cpp  test_hessian.cpp
code/week06_A/: .markdownlint.jsonc  CMakeLists.txt  README.md  codegen_ref.h  test_cse_equiv.cpp  test_sparse_assembly.cpp
docs/: A轨_12周总纲.md  week01_实操_AI代码验证闭环.md  week02_实操_退化输入防御.md  week03_实操_上下文注入.md  week04_实操_保特征网格平滑.md  week05_实操_SymPy推导梯度.md  week06_实操_符号转CPP.md  进阶_双轨AB版.md
prompt_library/: README.md
site-docs/: week01_代码解读.md  week01_补充_CMake构建解读.md  week02_代码解读.md  week02_补充_退化输入与容差.md  week03_代码解读.md  week03_补充_Eigen集成.md  week04_代码解读.md  week04_补充_网格数据结构与保特征.md  week05_代码解读.md  week05_补充_有限差分验证.md  week06_代码解读.md  week06_补充_CSE与Eigen稀疏组装.md
